# DTW-Accelerator

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  run_auto_test.sh  run_benchmarks.sh  run_fair_benchmarks.sh  run_scaling.sh  run_unit_tests.sh  setup_python.sh
include/dtw_accelerator/: constraints.hpp  core_dtw.hpp  distance_metrics.hpp  dtw_accelerator.hpp  dtw_utils.hpp  fast_dtw.hpp  main.cpp
include/dtw_accelerator/algorithms/: dtw_constrained_generic.hpp  dtw_generic.hpp  dtw_with_constraint_generic.hpp  fastdtw_generic.hpp
include/dtw_accelerator/core/: constraints.hpp  distance_metrics.hpp  dtw_concepts.hpp  dtw_utils.hpp  matrix.hpp  path_processing.hpp  time_series.hpp
include/dtw_accelerator/execution/: auto_strategy.hpp  base_strategy.hpp  execution_strategies.hpp
include/dtw_accelerator/execution/parallel/cuda/: cuda_dtw.hpp  cuda_strategy.hpp
include/dtw_accelerator/execution/parallel/cuda/core/: cuda_memory.hpp  device_functions.cuh
include/dtw_accelerator/execution/parallel/cuda/execution/: cuda_launcher.cu  cuda_launcher.hpp  cuda_strategy.hpp
include/dtw_accelerator/execution/parallel/cuda/kernels/: dtw_core_kernels.cu  dtw_core_kernels.cuh  matrix_kernels.cu  matrix_kernels.cuh  path_kernels.cu  path_kernels.cuh
include/dtw_accelerator/execution/parallel/mpi/: mpi_debug_strategy.hpp  mpi_dtw.hpp  mpi_strategy.hpp
include/dtw_accelerator/execution/parallel/openmp/: openmp_dtw.hpp  openmp_strategy.hpp
include/dtw_accelerator/execution/sequential/: blocked_strategy.hpp  core_dtw.hpp  fast_dtw.hpp  standard_strategy.hpp
include/dtw_accelerator/parallel/: hybrid.hpp  mpi_dtw.hpp  mpi_dtw_profiler.hpp  openmp_dtw.hpp  test_mpi.cpp  test_mpi_profiler.cpp
include/tests/: CMakeLists.txt  test_auto_strategy.cpp  test_constraints.cpp  test_core.cpp  test_distance_metrics.cpp  test_strategies.cpp
include/tests/performance/: CMakeLists.txt  benchmark_comprehensive.cpp  benchmark_cuda_only.cpp  benchmark_mpi_only.cpp  benchmark_openmp_only.cpp  benchmark_scaling.cpp  benchmark_sequential_pure.cpp  plot_results.py  plot_results_updated.py  profile_cuda.cpp
